One example book created

--- a/templates/store/home.html
+++ b/templates/store/home.html
@@ -9,11 +9,11 @@
       <section class="py-5 text-center container">
         <div class="row py-lg-5">
           <div class="col-lg-6 col-md-8 mx-auto">
-            <h1 class="h1 fw-bold">Search, Read, Buy, Review</h1>
-            <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator,
-              etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
+            <h1 class="h1 fw-bold">Buscar, Leer, Comprar, Evaluar</h1>
+            <p class="lead text-muted">Algo corto y destacable sobre la colección a continuación: su contenido,
+              el creador, etc. Hágalo breve y agradable, pero no demasiado corto para que la gente no lo pase por alto.</p>
             <p>
-              <a href="#" class="btn btn-primary my-2">Make an account</a>
+              <a href="#" class="btn btn-primary my-2">Crear cuenta</a>
             </p>
           </div>
         </div>
@@ -32,7 +32,7 @@
                 <img class="img-fluid" alt="Responsive image" src="{{ product.image.url }}">
                 <div class="card-body">
                   <p class="card-text">
-                    <a class="text-dark text-decoration-none" href="{{ product.get_absolute_url }}">{{ product.title }}</a>
+                    <a class="text-dark text-decoration-none" href="">{{ product.title }}</a>
                   </p>
                   <div class="d-flex justify-content-between align-items-center">
                     <small class="text-muted">9min read</small>
