Create add funcionality

--- a/templates/store/products/product_detail.html
+++ b/templates/store/products/product_detail.html
@@ -33,12 +33,13 @@
                                     <option value="">3</option>
                                     <option value="">4</option>
                                 </select>
-
                             </div>
-                            <div class="col-6 text-end"><button type="button"
-                                                                id="add-button"
-                                                                value="{{ product.id }}" class="btn btn-secondary btn-sm">Añadir
-                                a la cesta</button></div>
+                            <div class="col-6 text-end">
+                                <button type="button"
+                                        id="add-button"
+                                        value="{{ product.id }}" class="btn btn-secondary btn-sm">Añadir a la cesta
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
