--- a/templates/store/basket/summary.html
+++ b/templates/store/basket/summary.html
@@ -21,7 +21,7 @@
                     <div class="col border-bottom">
                         <div class="row p-3">
                             <div class="col-6">Tapa dura</div>
-                            <div class="col-6 text-end">{{ item.total_price }}<span id="subtotal" class="h6 fw-bold"> {{ product.price }}€</span></div>
+                            <div class="col-6 text-end">{{ item.total_price }}€ <span id="subtotal" class="h6 fw-bold"> {{ product.price }}</span><span class="h6 fw-bold">€</span></div>
                         </div>
                     </div>
                     <div class="col">
@@ -97,6 +97,7 @@
       success: function (json) {
         document.getElementById("basket-qty").innerHTML = json.qty
         document.getElementById("total").innerHTML = json.total
+        document.getElementById("subtotal").innerHTML = json.subtotal
       },
       error: function (xhr, errmsg, err) {}
     });
