--- a/templates/store/basket/summary.html
+++ b/templates/store/basket/summary.html
@@ -21,13 +21,13 @@
                     <div class="col border-bottom">
                         <div class="row p-3">
                             <div class="col-6">Tapa dura</div>
-                            <div class="col-6 text-end">{{ item.total_price }}€ <span id="subtotal" class="h6 fw-bold"> {{ product.price }}</span><span class="h6 fw-bold">€</span></div>
+                            <div class="col-6 text-end"><span id="subtotal" class="h6 fw-bold"> {{ product.price }}</span><span class="h6 fw-bold">€</span></div>
                         </div>
                     </div>
                     <div class="col">
                         <div class="row p-3">
                             <div class="col-12">
-                                <label for="select">Cantidad</label>
+                                <label for="select{{ product.id }}">Cantidad</label>
                                 <select id="select{{ product.id }}">
                                     <option selected>
                                         {{ item.qty }}
